first commit in the mamp build
tons of work here

--- a/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
@@ -8,6 +8,12 @@
 }
 
 .nu_section--similar-events {
+
+	&:last-child:not(.has-background) {
+		margin-bottom: 0 !important;
+	}
+
+
 	> .wp-block-group.alignfull.has-background:last-child {
 		padding-bottom: $margin_8x;
 		padding-left: 0;
