--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/_index.scss
@@ -38,7 +38,7 @@
 		}
 
 		&.has-white-background-color {
-			border: 1px solid $black;
+			border: 1px solid var(--wp--preset--color--black-1);
 		}
 	}
 }
