--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/features/_type-a.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/features/_type-a.scss
@@ -8,6 +8,10 @@
 .nu_pattern-is_feature--is_type_a {
 
 
+	.shim--offset-nav-items {
+		min-width: 240px;
+	}
+
 	.is-row-block {
 		> .wp-block-group:first-child {
 			max-width: 600px;
