--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/stat-highlights/_type-a.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/stat-highlights/_type-a.scss
@@ -15,6 +15,18 @@
 // 
 .nu_pattern-is_stat_highlight--is_type_a {
 
+	.wp-block-column {
+		padding: $margin_2x;
+		@include media( "<=medium" ){
+			padding: $base-margin;
+		}
+		@include media( "<=phone" ){
+			padding: 0;
+		}
+	}
+	.wp-block-columns {}
+	.wp-block-columns .wp-block-column {}
+	
 }
 
 .blocks--wrapper > .nu_pattern-is_stat_highlight--is_type_a {
