--- a/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/src/_footer.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/partials/frontend-only/src/_footer.scss
@@ -1,9 +1,18 @@
 /* 
 	Site Footer
 */
-
-//  resets for various elements in the footer
 footer.site-footer {
+	// ? switch svg fill to white, or invert img
+	a.logo {
+		border-bottom: none 0;
+
+		svg path {
+			fill: var(--wp--preset--color--white-1);
+		}
+		img {
+			filter: invert(100%);
+		}
+	}
 	ul,
 	ol {
 		list-style-type: none;
@@ -11,41 +20,204 @@ footer.site-footer {
 		margin: 0;
 		padding: 0;
 		&.sub-menu {
-			padding-left: ($base-margin * 0.5);
+			padding-left: $half-margin;
 		}
 	}
-}
+	background-color: var(--wp--preset--color--black-2);
 
-// opinionated styles below
-footer.site-footer {
-	//
-	margin: 0 0 0 0;
-	@media screen and (max-width: 781px) {
-		margin: 0 0 0 0;
+	// custom background color; force social icons bg to match (blend in)
+	background-color: var(--wp--custom--footer-background--dark);
+	.wp-social-link {
+		background-color: var(--wp--custom--footer-background--dark) !important;
 	}
+	color: var(--wp--preset--color--white-1);
+	padding: $margin_2x 0 $margin_4x 0;
 
-	background-color: $black;
-	color: $white;
-
-	//
-	> section {
-		//
-		margin: $margin_4x auto;
-		margin-top: 0;
-		width: calc(100% - $margin_8x);
-		//
+	// ? match how the header container controls width
+	> .container {
+		margin: 0 $margin_4x;
 		display: flex;
-		flex-flow: row wrap;
+		flex-flow: row nowrap;
 		align-items: flex-start;
-		justify-content: space-between; // forces outer groupings to l/r edges
+		// justify the row of two main content aras
+		> section {
+			flex: 1 1 auto;
+		}
+		// ? mobile
+		@include media("<=medium") {
+			flex-flow: column nowrap;
+		}
+		// ? desktop
+		@include media(">=medium") {
+			align-items: flex-start;
+			justify-content: space-between; // forces outer groupings to l/r edges
+			> section {
+				&:not(:first-child) {
+					margin: 0 0 0 $margin_8x;
+				}
+			}
+		}
 	}
 
-	> section > div {
-		flex: 0 1 auto;
-		margin: $margin_4x 0 0 $margin_2x;
+	//
+	//
+	//
+	//
+	.footer-content {
+		display: flex;
+		flex-flow: row nowrap;
+		// break the sidebar to below nav before final breakpoint
+		justify-content: flex-end;
+		align-items: flex-end;
+		@include media("<=xlarge") {
+			flex-flow: column nowrap;
+		}
+		
+		.navlinks {
+			//
+			.menu-item {
+				> a {
+					margin: 0;
+					font-weight: 400;
+					@include rfs(20px, line-height);
+					@include rfs(14px, --wp--preset--font-size--14-20);
+					color: var(--wp--preset--color--white-1);
+					opacity: 0.8;
+					display: inline-block;
+					span {
+						font-weight: 400;
+						@include rfs(14px);
+						@include rfs(20px, line-height);
+						color: var(--wp--preset--color--white-1);
+						@include accentUnderline();
+					}
+					&:hover,
+					&:focus {
+						opacity: 1;
+						span:before {
+							width: $base-margin;
+						}
+					}
+				}
+				&.current-menu-item,
+				&.current_page_ancestor {
+					> a {
+						opacity: 1;
+						span:before {
+							width: $base-margin;
+						}
+					}
+				}
+			}
+			// ? top level navlinks menu container
+			> .menu {
+				max-width: map-get($breakpoints, "medium");
+				display: flex;
+				flex-flow: row wrap;
+
+				// ? top level nav items
+				> .menu-item {
+					flex: 1 1 auto;
+					margin: $margin_2x;
+					> a {
+						> span {
+							font-weight: bold;
+							@include rfs(16px);
+							@include rfs(24px, line-height);
+						}
+					}
+					> .sub-menu {
+						margin-top: $half-margin;
+					}
+				}
+			}
+		}
+		
+
+		//
+		//
+		//
+		@include media(">=medium") {
+			.navlinks {
+				> .menu {
+					> .menu-item {
+					}
+				}
+			}
+		}
+
+		//
+		//
+		//
+		@include media("<=medium") {
+			.navlinks {
+				> .menu {
+					> .menu-item {
+						margin-bottom: 0;
+					}
+				}
+			}
+		}
+		//
+		//
+		@include media("<=phone") {
+			width: 100%;
+			.navlinks {
+				> .menu {
+					flex-flow: column nowrap;
+					align-items: center;
+					width: 100%;
+					margin: 0;
+					> .menu-item {
+						width: 100%;
+						margin: $margin_2x 0 0 0;
+					}
+				}
+			}
+		}
 	}
 
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
+	//
 	.footer-siteinfo {
+		> .logo {
+			margin-top: $margin_2x;
+		}
 		.address,
 		.contact,
 		.social {
@@ -53,14 +225,13 @@ footer.site-footer {
 			@include font-size(0.875rem);
 
 			a {
-				color: rgba($white, 0.8);
+				color: var(--wp--preset--color--white-1);
 				border-bottom: 1px solid transparent;
 				font-weight: 300;
 
 				&:hover,
 				&:focus {
-					//border-bottom: 1px solid rgba($white, 1);
-					color: rgba($white, 1);
+					color: var(--wp--preset--color--white-1);
 				}
 			}
 		}
@@ -68,14 +239,6 @@ footer.site-footer {
 		.contact {
 			display: flex;
 			flex-flow: column nowrap;
-
-			span {
-				margin: 5px 0 0 0;
-
-				&:first-child {
-					margin: 0;
-				}
-			}
 		}
 
 		.social {
@@ -90,191 +253,34 @@ footer.site-footer {
 			}
 		}
 	}
-	.footer-navmenu {
-		flex: 1 1 auto; // lets the navlinks container fill the remaining space in between the other columns
-	}
-	.navlinks {
-		> ul {
-			display: flex;
-			flex-flow: row wrap;
-			justify-content: space-evenly; // evenly distributes remaining space around and between the navlink columns
-		}
-		// ? reset styles for any menu item link
-		a {
-			color: rgba($white, 0.75);
-			border: none 0;
-			border-left: 5px solid transparent;
-			padding-left: 5px;
-			font-weight: 300;
-			font-size: 0.875rem;
-			margin-top: ($base-margin * 0.5);
-			display: inline-block;
-			&:hover,
-			&:focus {
-				border: none 0;
-				color: rgba($white, 1);
-				border-left: 5px solid rgba($white, 1);
-			}
-		}
-		// ? top level nav items are a row that may wrap
-		ul.menu {
-			// ? handle top level nav items
-			> li {
-				margin: 0 0 0 $margin_2x;
-				&:first-child {
-					margin: 0;
-				}
-				&.current_page_item,
-				&.current-page-ancestor {
-					> a {
-						color: rgba($white, 1);
-						border-left: 5px solid rgba($white, 1);
-					}
-				}
-
-				// ? top level nav links stand out
-				> a {
-					font-weight: bold;
-					&:hover,
-					&:focus,
-					&.current-menu-item,
-					&.menu-item-is-open,
-					&.neu__dropdown--active,
-					&.current-menu-parent,
-					&.current-page-ancestor {
-						border-left: 5px solid rgba($white, 1);
-					}
-				}
-			}
+	.nu__footer-sidebar {
+		* {
+			color: var(--wp--preset--color--white-1);
 		}
 
-		// ? any level of menu item with children
-		// ?
-		li.menu-item-has-children {
-			> .sub-menu {
-				> li {
-					&.current_page_item {
-						> a {
-							color: rgba($white, 1);
-							border-left: 5px solid rgba($white, 1);
+		div.wpforms-container-full {
+			form.wpforms-form {
+				display: flex;
+				flex-flow: row nowrap;
+				align-items: flex-start;
+
+				.wpforms-submit-container {
+					margin-top: 22px; // ? WTF
+					button.wpforms-submit {
+						margin: 0;
+						height: 38px;
+						background-color: var(--wp--preset--color--red-3);
+						border: 1px solid var(--wp--preset--color--red-3);
+						color: var(--wp--preset--color--white-1);
+						&:hover,
+						&:focus {
+							border: 1px solid var(--wp--preset--color--red-3);
+							color: var(--wp--preset--color--red-3);
+							background-color: var(--wp--preset--color--white-1);
 						}
 					}
 				}
 			}
 		}
 	}
-
-	.footer-sidebar {
-		div.wpforms-container-full form.wpforms-form .wpforms-submit-container {
-			button.wpforms-submit {
-				margin: 0;
-				background-color: var(--wp--preset--color--nu-brand-red);
-				border: 1px solid var(--wp--preset--color--nu-brand-red);
-				color: $white;
-				&:hover,
-				&:focus {
-					border: 1px solid var(--wp--preset--color--nu-brand-red);
-					color: var(--wp--preset--color--nu-brand-red);
-					background-color: $white;
-				}
-			}
-		}
-	}
-
-	// ?
-	@media screen and (max-width: 960px) {
-		> section {
-			flex-flow: column nowrap;
-			> div {
-				margin: $margin_4x 0 0 0;
-			}
-		}
-	}
-
-	// ?
-	@media screen and (max-width: 780px) {
-		> section {
-			width: 90%;
-		}
-
-		.navlinks > ul.menu {
-			> li {
-				flex: 1 0 100%;
-				margin: $margin_2x 0 0 0;
-			}
-		}
-	}
-}
-
-//
-//
-//
-//
-//
-//
-//
-// 	older junkier stuff below
-//
-//
-//
-//
-//
-//
-//
-
-footer.site-footer {
-	.footer-siteinfo {
-	}
-
-	// todo: add this to some kind of dark mode?
-	// ? switch svg fill to white, or invert img
-	a.logo {
-		border-bottom: none 0;
-
-		svg path {
-			fill: $white;
-		}
-		img {
-			filter: invert(100%);
-		}
-	}
-
-	.nu__footer-sidebar.widget_block {
-		form.wpforms-form {
-			.wpforms-field-container,
-			.wpforms-submit-container {
-				display: inline-block;
-				vertical-align: middle;
-				margin: 0;
-				padding: 0;
-			}
-
-			.wpforms-field {
-				padding: 0;
-
-				input {
-					min-height: 44px;
-				}
-			}
-
-			.wpforms-title {
-				font-size: 1rem;
-				font-weight: bold;
-			}
-
-			.wpforms-description {
-				font-size: 0.875rem;
-			}
-		}
-	}
-}
-
-/**
-*		Global  Footer
-*/
-//
-#nu-global-footer a:hover,
-#nu-global-footer a:focus,
-#nu-global-footer a:active {
-	border: none 0;
 }
