--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_group.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_group.scss
@@ -11,6 +11,12 @@
 		margin-top: $margin_2x;
 	}
 
+	&.has-text-color {
+		* {
+			color: inherit;
+		}
+	}
+
 	// ? typographical elements should push down by even less
 	> p,
 	.wp-block-paragraph {
@@ -30,7 +36,7 @@
 // * the "card style" adds a border and padding; and some inner content behaves differently
 .wp-block-group.is-style-card-outlined {
 
-	border: 1px solid $grey_4;  // ? this may be overriden by the CMS
+	border: 1px solid var(--wp--preset--color--black-3);  // ? this may be overriden by the CMS
 
 	// ? force through a specific level of padding
 	&.has-background, & {
@@ -54,4 +60,8 @@
 	> .wp-block-media-text {
 		margin-bottom: -$margin_4x;
 	}
+}
+
+.wp-block-group.is-row-block {
+
 }
