--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/faq-sections/_type-b.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/faq-sections/_type-b.scss
@@ -4,10 +4,10 @@
 
 	> .wp-block-columns {
 		margin: 0;
-		border-top: 1px solid transparentize($black, 0.75);
+		border-top: 1px solid var(--wp--preset--color--black-1);
 		padding: $margin_2x 0;
 		&:last-child {
-			border-bottom: 1px solid transparentize($black, 0.75);
+			border-bottom: 1px solid var(--wp--preset--color--black-1);
 		}
 	}
 	
