--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/newsletter-sections/_type-b.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/newsletter-sections/_type-b.scss
@@ -1,3 +1,6 @@
-.nu_pattern-is_newsletter-section--is_type_b {
+/* 
 
+*/
+.nu_pattern-is_newsletter-section--is_type_b {
+    @include styles_for_all_newsletter_sections;
 }
