--- a/wp-content/themes/nu-start/__precomp/source/css/partials/core/src/_misc-custom-elems.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/partials/core/src/_misc-custom-elems.scss
@@ -7,7 +7,7 @@
 		height: 20px;
 		path {
 			@extend %transition;
-			fill: rgba($white, 0.8);
+			fill: var(--wp--preset--color--white-1);
 		}
 	}
 	a {
@@ -18,7 +18,7 @@
 		&:active {
 			border: none 0;
 			svg path {
-				fill: rgba($white, 1);
+				fill: var(--wp--preset--color--white);
 			}
 		}
 	}
@@ -46,9 +46,9 @@
 	display: none;
 	position: fixed; 
 	z-index: 9999;
-	background-color: $black;
-	background-color: $grey_10;
-	color: $white;
+	background-color: var(--wp--preset--color--black-1);
+	background-color: var(--wp--preset--color--black-3);
+	color: var(--wp--preset--color--white-1);
 	width: 90%;
 	max-width: 960px;
 	left: 0;
@@ -56,12 +56,11 @@
 	bottom: 0;
 	margin: 0 auto;
 	padding: $margin_2x;
-	border: 1px solid $grey_4;
-	// @include boxshadow(2);
-	box-shadow: 0 2px 4px rgba(0,0,0,0.5);
+	border: 1px solid var(--wp--preset--color--black-3);
+	@include nu__boxshadow(2);
 
 	p {
-		color: $white;
+		color: var(--wp--preset--color--white-1);
 
 		strong {
 			color: inherit;
@@ -98,7 +97,7 @@
 		@extend %nu__buttonstyle;
 		border: 2px solid white;
 		margin-bottom: 0;
-		background-color: $grey_10;
+		background-color: var(--wp--preset--color--black-3);
 	}
 
 	@include flush_inner_content_vertical();
@@ -131,4 +130,39 @@
 
 	/* Support for IE. */
 	font-feature-settings: "liga";
+}
+
+
+footer.site-footer {
+
+	.nu__footer-sidebar {
+		* {
+			color: var(--wp--preset--color--white-1);
+		}
+	
+		div.wpforms-container-full {
+			form.wpforms-form {
+				display: flex;
+				flex-flow: row nowrap;
+				align-items: flex-start;
+	
+				.wpforms-submit-container {
+					margin-top: 22px; // ? WTF
+					button.wpforms-submit {
+						margin: 0;
+						height: 38px;
+						background-color: var(--wp--preset--color--red-3);
+						border: 1px solid var(--wp--preset--color--red-3);
+						color: var(--wp--preset--color--white-1);
+						&:hover,
+						&:focus {
+							border: 1px solid var(--wp--preset--color--red-3);
+							color: var(--wp--preset--color--red-3);
+							background-color: var(--wp--preset--color--white-1);
+						}
+					}
+				}
+			}
+		}
+	}
 }
